Updated jumbotron h1 with display 1 text class

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@ html {
 h1 {
     color: #011826;
     text-shadow: 2px 2px 2px 2px #011826;
+    font-size: 2rem;
 }
 
 h2 {
@@ -142,9 +143,8 @@ a.btn.btn-info.btn-lg:hover {
 
 }
 
-.jumbotron-container h1 {
+h1.display-1 {
   font-family: 'Montserrat', sans-serif;
-  font-size: 7rem;
   color: #f2f2f2;
   font-weight: 200;
   text-transform: uppercase;
