Resized jumbotron h1 and edited overlay

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,7 +108,7 @@ a.navbar-brand {
 .jumbotron-container {
     height: 100vh;
 
-    background: url('../images/jumbotron.jpg') no-repeat bottom right fixed;
+    background: url('../images/jumbotron.jpg') no-repeat bottom center fixed;
     background-size: cover;
     
     -webkit-background-size: cover;
@@ -143,7 +143,7 @@ a.btn.btn-info.btn-lg:hover {
 
 }
 
-h1.display-1 {
+h1.display-3 {
   font-family: 'Montserrat', sans-serif;
   color: #f2f2f2;
   font-weight: 200;
@@ -166,7 +166,7 @@ p.lead {
     left: 0;
     height: 100%;
     width: 100%;
-    background-color: rgba(1, 10, 10, .8);
+    background-color: rgba(1, 10, 10, .6);
     overflow: visible;
 }
 
