--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,12 +17,12 @@ html {
 h1 {
     color: #011826;
     text-shadow: 2px 2px #011826;
-    font-size: 2rem;
+    font-size: 2.5rem;
 }
 
 h2 {
     font-family: 'Playfair Display', serif;
-    font-size: 3rem;
+    font-size: 2rem;
     font-style: italic;
     font-weight: 500;
     text-align: center;
@@ -36,7 +36,7 @@ h3 {
     color: #011826;
     padding-bottom: 30px;
     margin: 0 auto;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 footer h6 {
@@ -96,14 +96,9 @@ a.navbar-brand {
     overflow: scroll;
 }
 
-.container-fluid.blue-wrapper {
-    padding: 40px 60px;
+.container-wrapper-blue {
     background-color: rgba(135, 156, 166, 0.3);
-    margin: 0 auto;
-}
-
-.container.text-center.bg-blue {
-    max-width: 960px;
+    max-width: 100%;
 }
 
 /* Jumbotron */
@@ -275,7 +270,7 @@ div.img-thumbnail {
 }
 
 div.carousel-inner {
-    padding: 40px 40px;
+    padding: 20px 20px;
 }
 
 div.carousel-item {
