--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -403,3 +403,38 @@ h3.about-header {
 }
      }
 
+/* Animations 
+copied from https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp */
+
+.slideanim {visibility:hidden;}
+.slide {
+  animation-name: slide;
+  -webkit-animation-name: slide;
+  animation-duration: 2s;
+  -webkit-animation-duration: 2s;
+  /* Make the element visible */
+  visibility: visible;
+}
+
+@keyframes slide {
+  0% {
+    opacity: 0;
+    transform: translateY(70%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
+@-webkit-keyframes slide {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(70%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0%);
+  }
+}
+
+
