--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400&family=Playfair+Display:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;800;900&family=Playfair+Display:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,600&display=swap');
 
 /*-----------------------------------------Global Styles */
 * {
@@ -504,14 +504,15 @@ body {
  right:0;
  top:110px;
  font-size:42px;
- font-weight:700;
+ font-weight:800;
  color:#fff;
  text-transform:uppercase;
   text-shadow: 0px 2px 0px #8400ff;
  letter-spacing:13px;
  margin:0;
-
+ font-size: 28px;
 }
+
 .notfound a {
  font-family: 'Montserrat', sans-serif;
  display:inline-block;
@@ -533,9 +534,9 @@ body {
  color: #000;
 }
 
-.notfound.button a:hover {
-    background-color: #fe0943;
-    border-color: #fe0943;
+a.button:hover {
+    background-color: #ff005a;
+    border-color: #ff005a;
     color: #F2F2F2;
 }
 
