--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,7 @@ a.navbar-brand {
 .jumbotron-container {
     height: 100vh;
 
-    background: url('../images/jumbotron.jpg') no-repeat bottom right fixed;
+    background: url('../images/infinityphoto.jpg') no-repeat bottom right fixed;
     background-size: cover;
     
     -webkit-background-size: cover;
