Testing mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,7 @@
 
 /*-----------------------------------------Global Styles */
 * {
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+     box-sizing: border-box;
 }
 
 html {
@@ -106,7 +105,7 @@ a.navbar-brand {
 .jumbotron-container {
     height: 100vh;
 
-    background: url('../images/infinityphoto.jpg') no-repeat bottom right fixed;
+    background: url('../images/jumbotron.jpg') no-repeat bottom right fixed;
 
     background-size: cover;
     
@@ -118,7 +117,6 @@ a.navbar-brand {
     align-items: center;
     justify-content: center;
 
-    position: relative;
     overflow: hidden;
 }
 
@@ -169,15 +167,6 @@ p.lead {
 
 
 /*-------------------------------------------- Jumbotron Overlay */
-.jumbotron-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-color: rgba(1, 10, 10, .65);
-    overflow: visible;
-}
 
 /*-------------------------------------------- About */
 .about {
