--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ a.navbar-brand {
 .jumbotron-container {
     height: 100vh;
 
-    background: url('../images/jumbotron.jpg') no-repeat bottom right fixed;
+    background: url('./../images/jumbotron.jpg') no-repeat bottom right fixed;
 
     background-size: cover;
     
