--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,27 +107,26 @@ a.navbar-brand {
 
     background-image: url('../images/jumbotron.jpg') no-repeat bottom right fixed;
 
-    background-size: cover;
-    
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-
+    background-size: cover;
+    
     display: flex;
     align-items: center;
     justify-content: center;
 
-    overflow: hidden;
+    position: relative;
 }
 
-.jumbotron-overlay {
-   position: absolute;
+.opaque-overlay {
+    position: absolute;
     top: 0;
     left: 0;
     height: 100%;
     width: 100%;
-    background-color: rgba(1, 10, 10, .5);
- }
+    background-color: rgba(0, 0, 0, 0.5);
+}
 
 .jumbotron button {
     font-family: 'Playfair Display', serif;
