--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,29 +103,12 @@ a.navbar-brand {
 /* Jumbotron */
 /* jumbotron syntax and were copied from Code Institute's Whiskey Drop project */
 .jumbotron-container {
-    height: 100vh;
-
-    background: url('../images/jumbotron.jpg') no-repeat center center fixed;
+    background-image: url('../images/jumbotron.jpg') no-repeat center center fixed;
     
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-
-    display: -webkit-box;
-
-    display: -ms-flexbox;
-
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-
-    position: relative;
-    overflow: hidden;
 }
 
 .jumbotron-overlay {
