Repaired jumbotron error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,30 +103,22 @@ a.navbar-brand {
 /* Jumbotron */
 /* jumbotron syntax and were copied from Code Institute's Whiskey Drop project */
 .jumbotron-container {
-    height: 100vh;
+     background-image: url('../images/infinityphoto.jpg');
 
-    background: url('../images/jumbotron.jpg') no-repeat center center fixed;
-    
-    background-size: cover;
-    
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
 
-    display: -webkit-box;
+    background-size: cover;
+    height: 100vh;
+    min-height: 100%;
 
-    display: -ms-flexbox;
+    justify-content: center;
+     display: flex;
+     align-items: center;
 
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-
-    position: relative;
-    overflow: hidden;
+     position: relative;
+     overflow: hidden;
 }
 
 .jumbotron-overlay {
@@ -366,31 +358,25 @@ footer i.fas.fa-chevron-up:hover {
 
 /*-------------------------------------------- Media Queries */
   @media only screen and (max-width: 320px) {
-    .jumbotron-container { 
-            height: 100vh;
-            
-            background: url('../images/jumbotron.jpg') no-repeat center center fixed;
-            background-size: cover;
-            
-             -webkit-background-size: cover;
-             -moz-background-size: cover;
-             -o-background-size: cover;
-             
-            display: -webkit-box;
-            display: -ms-flexbox;
-            
-            display: flex;
-            -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-            
-            position: relative;
-            overflow: hidden;
-            }
+    .jumbotron-container {
+     background-image: url('../images/infinityphoto.jpg');
+
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+
+    background-size: cover;
+    height: 100vh;
+    min-height: 100%;
+
+    justify-content: center;
+     display: flex;
+     align-items: center;
+
+     position: relative;
+     overflow: hidden;
     }
+}
 
 /* stack overflow (https://stackoverflow.com/questions/56964388/how-to-fix-font-awesome-icons-not-showing-on-mobile-chrome) */
 @media screen and (max-width:600px){
