--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,7 +127,7 @@ a.navbar-brand {
     left: 0;
     height: 100%;
     width: 100%;
-    background-color: rgba(1, 10, 10, .65);
+    background-color: rgba(1, 10, 10, .75);
     overflow: visible;
 }
 
@@ -140,16 +140,20 @@ a.navbar-brand {
 
 a.btn.btn-info.btn-lg {
     background-color: #69a8a9;
-    color: #f2f2f2;
-    border-color: #69a8a9;
+    color: #011826;
+    border: none;
+    font-family: 'Playfair Display', serif;
+    font-style: italic;
 }
 
 a.btn.btn-info.btn-lg:hover {
-    background-color: #f2f2f2;
-    color: #69a8a9;
-    border-color: #f2f2f2;
-
+    background-color: #203745bf;
+    color: #f2f2f2;
+    border: none;
+    font-family: 'Playfair Display', serif;
+    font-style: italic;
 }
+
 
 h1.display-3 {
   font-family: 'Montserrat', sans-serif;
@@ -244,13 +248,16 @@ div.img-thumbnail {
     padding-bottom: 20px;
     border: none;
     margin-bottom: 30px;
-    border-radius: 5px;
+    background-color: transparent
 }
 
 .img-thumbnail img {
     width: 100%;
     height: 100%;
     margin-bottom: 10px;
+    background-color: transparent;
+    border-radius: 5%;
+    background-color: #adb3b65e;
 }
 
 /*-------------------------------------------- Quotes */
