--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,9 +12,14 @@ html {
     font-size: 16px;
 }
 
-.row, .container, .container-fluid { 
+.row, .container { 
     padding: 0;
     margin: 0; 
+}
+
+hr {
+    border-top: 2.5px solid rgb(33, 37, 41);
+    width: 5%;
 }
 
 /*-----------------------------------------Headers */
@@ -31,7 +36,6 @@ h2 {
     font-style: italic;
     font-weight: 500;
     text-align: center;
-    padding-bottom: 20px;
 }
 
 h3 {
@@ -111,16 +115,16 @@ a.navbar-brand {
     padding-bottom: 75px;
 }
 
-.container-fluid {
-    padding: 20px 60px;
-    margin: 0 auto;
-    overflow: scroll;
-}
-
 .container-wrapper-blue {
     background-color: rgba(135, 156, 166, 0.3);
     max-width: 100%;
 }
+
+.container-fluid {
+    padding: 20px 60px;
+    margin: 0 auto;
+}
+
 
 /* Jumbotron */
 /* jumbotron syntax and were copied from Code Institute's Whiskey Drop project */
