--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,7 @@
 
 /*-----------------------------------------Global Styles */
 * {
-     -webkit-box-sizing: border-box;
-             box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html {
@@ -43,13 +42,16 @@ h3 {
     font-style: italic;
     text-align: center;
     color: #011826;
-    padding-bottom: 30px;
-    margin: 0 auto;
     font-size: 1.5rem;
 }
 
-footer h6 {
+h4, h5, h6 {
     font-family: 'Playfair Display', serif;
+    font-style: italic;
+    text-align: center;
+    color: #011826;
+    font-size: 1.2rem;
+    font-weight: 500;
 }
 
 p {
@@ -235,31 +237,6 @@ p.lead {
      float: none;
 }
 
-h3.about-header {
-    font-family: 'Playfair Display', serif;
-    font-style: italic;
-    font-weight: 500;
-    margin-top: 50px;
-    float: none;
-}
-
-h4.about-header {
-    font-family: 'Playfair Display', serif;
-    font-size: 1.2rem;
-    font-style: italic;
-    font-weight: 500;
-    margin: 0 auto;
-    padding-bottom: 10px;
-}
-
-p.display-4.about-content {
-    font-size: 15px;
-}
-
-p.text-md-center.font-weight-normal {
-    padding: 10px 40px;
-}
-
 /*-------------------------------------------- Icons */
 i.fas.fa-yin-yang.d-sm-block,
 i.fas.fa-peace.d-sm-block,
@@ -282,20 +259,13 @@ i.fas.fa-praying-hands.d-sm-block:hover {
 }
 
 /*-------------------------------------------- Schedule */
-div.img-thumbnail {
-    padding-bottom: 20px;
-    border: none;
-    margin-bottom: 30px;
-    background-color: transparent
-}
-
-.img-thumbnail img {
+.img-thumbnail.rounded {
     width: 100%;
     height: 100%;
-    margin-bottom: 10px;
     background-color: transparent;
-    border-radius: 5%;
-    background-color: #adb3b65e;
+    box-sizing: border-box;
+    box-shadow: 1px 2px 1px 2px #375a5a75;
+    margin-bottom: 20px;
 }
 
 /*-------------------------------------------- Quotes */
@@ -328,16 +298,6 @@ i.fas.fa-chevron-right:hover {
 
 .carousel-indicators li.active {
     background-color: #011826;
-}
-
-h3.text-center.quotes {
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-
-b, strong {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
 }
 
 #myCarousel {
