--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,13 +12,14 @@ html {
 }
 
 .row, .container { 
-    padding: 0;
     margin: 0; 
 }
 
 hr {
     border-top: 2.5px solid rgb(33, 37, 41);
-    width: 5%;
+    width: 25px;
+    margin-top: 20px;
+    margin-bottom: 40px;
 }
 
 /*-----------------------------------------Headers */
@@ -58,7 +59,6 @@ p {
     font-family: 'Montserrat', sans-serif;
     font-size: 1rem;
     text-align: center;
-    padding: inherit;
 }
 
 h2.section-header {
@@ -67,10 +67,6 @@ h2.section-header {
     font-weight: 500;
     text-align: center;
     padding-bottom: 20px;
-}
-
-.row {
-    padding-top: 20px;
 }
 
 /*-------------------------------------------- Navbar */
