Repaired and styled contact and about sections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,8 @@ h3 {
     text-align: center;
     color: #011826;
     font-size: 1.5rem;
+    margin-bottom: 30px;
+    padding-bottom: 30px;
 }
 
 h4, h5, h6 {
@@ -101,12 +103,6 @@ a.navbar-brand {
 }
 
 /*-------------------------------------------- Containers */
-
-.container-wrapper-blue {
-    background-color: rgba(135, 156, 166, 0.3);
-    max-width: 100%;
-    padding-top: inherit;
-}
 
 .container-fluid {
     padding: 20px 60px;
@@ -176,11 +172,6 @@ h1.display-3 {
 }
 
 /*-------------------------------------------- About */
-.about {
-    text-align: center;
-    padding-bottom: 40px;
-    margin-top: 50px;
-}
 
 .about i {
     margin-bottom: 20px;
@@ -193,6 +184,12 @@ h1.display-3 {
     font-weight: 400;
     margin: 0 auto;
     float: none;
+    margin-bottom: 40px;
+}
+
+#about {
+    padding-top: 40px;
+    margin-top: 50px;
 }
 
 /*-------------------------------------------- Icons */
@@ -228,33 +225,21 @@ i.fas.fa-praying-hands.d-sm-block:hover {
 }
 
 /*-------------------------------------------- Quotes */
-
-
-/*-------------------------------------------- Contact */
-
-div.col-12.col-6 {
-    -ms-flex-line-pack: center;
-        align-content: center;
-    margin: 0px auto;
-    text-align: left;
-}
-
-.embed-responsive.embed-responsive-16by9 {
-    -ms-flex-line-pack: center;
-        align-content: center;
-    margin: 0px auto;
-    text-align: center;
-}
-
-/*-------------------------------------------- Contact */
-
-section#contact.contact {
+.quotes-container {
+    position: relative;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #90bfc0;
+    overflow: visible;
     padding-top: 40px;
+    padding-bottom: 40px;
+    margin-top: 50px;
+    margin-bottom: 30px;
 }
 
-h2.text-center {
-    padding-bottom: 0;
-}
+/*-------------------------------------------- Contact */
 
 button.btn.btn-info.float-right {
     background-color: #69a8a9;
@@ -292,12 +277,6 @@ footer h6 {
 }
 
 /*-------------------------------------------- Sections */
-#about {
-    padding-top: 40px;
-    padding-bottom: 40px;
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
 
 #schedule {
     padding-top: 40px;
@@ -305,7 +284,6 @@ footer h6 {
     margin-top: 50px;
     margin-bottom: 50px;
     background-color: rgba(135, 156, 166, 0.3);
-    max-width: 100%;
 }
 
 #contact {
@@ -313,10 +291,6 @@ footer h6 {
     padding-bottom: 40px;
     margin-top: 50px;
     margin-bottom: 50px;
-}
-
-#footer {
-    margin-top: 50px;
 }
 
 /*-------------------------------------------- Media Queries */
@@ -345,25 +319,7 @@ footer h6 {
     }
 }
 
-/* stack overflow (https://stackoverflow.com/questions/56964388/how-to-fix-font-awesome-icons-not-showing-on-mobile-chrome) */
-@media screen and (max-width:600px){
-i {
-    color: #69a8a9;
-    }
-}
 
-@media screen and (max-width:600px){
-i:hover {
-    color: #081826;
-    }
-}
-
- @media screen and (max-width:600px) {
-     #myCarousel {
-    font-family: 'Montserrat', sans-serif;
-    overflow: scroll;
-    }
-}
 
 /* 404 Error Page 
     Made by Colorlib (https://colorlib.com) */
