--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,9 @@ html {
     font-size: 16px;
 }
 
-.row, .container { 
-    margin: 0; 
+.row,
+.container {
+    margin: 0;
 }
 
 hr {
@@ -47,7 +48,9 @@ h3 {
     padding-bottom: 30px;
 }
 
-h4, h5, h6 {
+h4,
+h5,
+h6 {
     font-family: 'Playfair Display', serif;
     font-style: italic;
     text-align: center;
@@ -64,9 +67,9 @@ p {
 
 /*-------------------------------------------- Navbar */
 .navbar {
-   font-family: 'Playfair Display', serif;
-   font-size: 1rem !important;
-   line-height: 1.5;
+    font-family: 'Playfair Display', serif;
+    font-size: 1rem !important;
+    line-height: 1.5;
 }
 
 i.fas.fa-infinity {
@@ -77,8 +80,8 @@ i.fas.fa-infinity:hover {
     color: #011826;
 }
 
-i.fab.fa-twitter-square, 
-i.fab.fa-facebook-square, 
+i.fab.fa-twitter-square,
+i.fab.fa-facebook-square,
 i.fab.fa-instagram-square,
 i.fab.fa-pinterest {
     color: #69a8a9;
@@ -86,7 +89,7 @@ i.fab.fa-pinterest {
 }
 
 i.fab.fa-twitter-square:hover,
-i.fab.fa-facebook-square:hover, 
+i.fab.fa-facebook-square:hover,
 i.fab.fa-instagram-square:hover,
 i.fab.fa-pinterest:hover {
     color: #011826;
@@ -120,18 +123,18 @@ a.navbar-brand {
 
     -webkit-box-pack: center;
 
-        -ms-flex-pack: center;
+    -ms-flex-pack: center;
 
-            justify-content: center;
-     display: -webkit-box;
-     display: -ms-flexbox;
-     display: flex;
-     -webkit-box-align: center;
-         -ms-flex-align: center;
-             align-items: center;
+    justify-content: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
 
-     position: relative;
-     overflow: hidden;
+    position: relative;
+    overflow: hidden;
 }
 
 .jumbotron-overlay {
@@ -163,12 +166,12 @@ a.btn.btn-info.btn-lg:hover {
 
 
 h1.display-3 {
-  font-family: 'Montserrat', sans-serif;
-  color: #f2f2f2;
-  font-weight: 200;
-  text-transform: uppercase;
-  letter-spacing: 1.5px;
-  text-shadow: 2px 2px #011826;
+    font-family: 'Montserrat', sans-serif;
+    color: #f2f2f2;
+    font-weight: 200;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+    text-shadow: 2px 2px #011826;
 }
 
 /*-------------------------------------------- About */
@@ -307,142 +310,150 @@ footer h6 {
 }
 
 /*-------------------------------------------- Media Queries */
-  @media only screen and (max-width: 320px) {
+@media only screen and (max-width: 320px) {
     .jumbotron-container {
-     background-image: url('../images/infinityphoto.jpg');
+        background-image: url('../images/infinityphoto.jpg');
 
-    background-size: cover;
-    height: 100vh;
-    min-height: 100%;
+        background-size: cover;
+        height: 100vh;
+        min-height: 100%;
 
-    -webkit-box-pack: center;
+        -webkit-box-pack: center;
 
-    -ms-flex-pack: center;
+        -ms-flex-pack: center;
 
-    justify-content: center;
-     display: -webkit-box;
-     display: -ms-flexbox;
-     display: flex;
-     -webkit-box-align: center;
-         -ms-flex-align: center;
-             align-items: center;
+        justify-content: center;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
 
-     position: relative;
-     overflow: hidden;
+        position: relative;
+        overflow: hidden;
     }
 }
 
 
 
-/* 404 Error Page 
-    Made by Colorlib (https://colorlib.com) */
+/* 404 Error Page (https://colorlib.com) */
 * {
- -webkit-box-sizing:border-box;
- box-sizing:border-box
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box
 }
 
 body {
- padding:0;
- margin:0
+    padding: 0;
+    margin: 0;
+    background: #f2f2f2;
 }
 
 #notfound {
- position:relative;
- height:100vh;
- background:#030005
+    position: relative;
+    height: 100vh;
 }
 
 #notfound .notfound {
- position:absolute;
- left:50%;
- top:50%;
- -webkit-transform:translate(-50%,-50%);
- -ms-transform:translate(-50%,-50%);
- transform:translate(-50%,-50%)
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%)
 }
+
 .notfound {
- max-width:767px;
- width:100%;
- line-height:1.4;
- text-align:center
+    max-width: 767px;
+    width: 100%;
+    line-height: 1.4;
+    text-align: center
 }
+
 .notfound .notfound-404 {
- position:relative;
- height:180px;
- margin-bottom:20px;
- z-index:-1
+    position: relative;
+    height: 180px;
+    margin-bottom: 20px;
+    z-index: -1;
 }
+
 .notfound .notfound-404 h1 {
- font-family: 'Montserrat', sans-serif;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50% , -50%);
-      -ms-transform: translate(-50% , -50%);
-          transform: translate(-50% , -50%);
-  font-size: 224px;
-  font-weight: 900;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  margin-left: -12px;
-  color: #030005;
-  text-transform: uppercase;
-  text-shadow: -1px -1px 0px #45d1e8, 1px 1px 0px #ff005a;
-  letter-spacing: -20px;
+    font-family: 'Montserrat', sans-serif;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    font-size: 200px;
+    font-weight: 900;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: -12px;
+    color: #fe5e7c96;
+    text-transform: uppercase;
+    text-shadow: -1px -1px 0px #e6d8e059, 1px 1px 0px #a5e8e8;
+    letter-spacing: -20px;
+    z-index: ;
 }
 
 .notfound .notfound-404 h2 {
- font-family: 'Montserrat', sans-serif;
- font-style: normal;
- position:absolute;
- left:0;
- right:0;
- top:110px;
- font-size:42px;
- font-weight:800;
- color:#fff;
- text-transform:uppercase;
-  text-shadow: 0px 2px 0px #8400ff;
- letter-spacing:13px;
- margin:0;
- font-size: 28px;
+    font-family: 'Playfair Display', serif;
+    font-style: normal;
+    position: relative;
+    left: 20px;
+    right: 20px;
+    top: -40px;
+    /*! font-size:80px; */
+    font-weight: 800;
+    color: #000106;
+    text-transform: uppercase;
+    text-shadow: 0px 1px 0px #74b2e0;
+    letter-spacing: 8px;
+    margin: 0;
+    font-size: 28px;
+    font-size: 40px;
 }
 
 .notfound a {
- font-family: 'Montserrat', sans-serif;
- display:inline-block;
- text-transform:uppercase;
- color: #ff005a;
- text-decoration:none;
- border:2px solid;
- background:0 0;
- padding:10px 40px;
- font-size:14px;
- font-weight:700;
- -webkit-transition:.2s all;
- -o-transition:.2s all;
- transition:.2s all
+    font-family: 'Montserrat', sans-serif;
+    display: inline-block;
+    text-transform: uppercase;
+    color: #000106;
+    text-decoration: none;
+    border: 2px solid;
+    background: 0 0;
+    padding: 10px 40px;
+    font-size: 14px;
+    font-weight: 700;
+    -webkit-transition: .2s all;
+    -o-transition: .2s all;
+    transition: .2s all
 }
 
 .notfound a:hover {
- background-color: #45d1e8;
- border-color: #45d1e8;
- color: #000;
+    background-color: #90bfc0;
+    border-color: #90bfc0;
+    color: #f2f2f2;
 }
 
 a.button:hover {
-    background-color: #ff005a;
-    border-color: #ff005a;
+    background-color: #d59cad;
+    border-color: #d59cad;
     color: #F2F2F2;
 }
 
 @media only screen and (max-width:767px) {
- .notfound .notfound-404 h2 {
-  font-size:24px
- }
+    .notfound .notfound-404 h2 {
+        font-size: 30px;
+        text-align: center;
+        /*! left: 20px; */
+        /*! padding: 30px 30px 20px inherit; */
+    }
 }
+
 @media only screen and (max-width:480px) {
- .notfound .notfound-404 h1 {
-  font-size:182px
- }
+    .notfound .notfound-404 h1 {
+        font-size: 182px
+    }
 }
